ci, only add cobertura